# pyemd

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG.rst  CONTRIBUTING.md  DEVELOPING.md  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  dev_requirements.txt  dist_requirements.txt  meson.build  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: build_wheels.yml  make_sdist.yml
changelog.d/: +ci-simplify.misc  +ninja-dep.bugfix  +pot-backend.feature  +python-312.removal  +readme-pot.doc  +v2-pure-python.removal  68.bugfix
docs/: precision.md
pyemd/: __about__.py  __init__.py  emd.cpp  emd.pyx
pyemd/lib/: emd_hat.hpp  emd_hat_impl.hpp  emd_hat_signatures_interface.hpp
pyemd/test/: test_pyemd.py
src/pyemd/: __init__.py  _pot_backend.py  emd.py  emd.pyx
src/pyemd/lib/: EMD_DEFS.hpp  emd_hat_impl.hpp  emd_hat_signatures_interface.hpp  flow_utils.hpp  min_cost_flow.hpp
test/: .pylintrc  test_pyemd.py
