[build-system]
requires = [
	"cython",
	"oldest-supported-numpy",
	"setuptools >= 45",
	"setuptools_scm",
	"wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyemd"
license = { file = "LICENSE" }
description = "A Python wrapper for Ofir Pele and Michael Werman's implementation of the Earth Mover's Distance."
authors = [{ name = "Will Mayner", email = "wmayner@gmail.com" }]
requires-python = ">=3.7"
dependencies = ["numpy >= 1.9.0"]
readme = "README.rst"
classifiers = [
	'Development Status :: 5 - Production/Stable',
	'Intended Audience :: Developers',
	'Natural Language :: English',
	'License :: OSI Approved :: MIT License',
	'Programming Language :: Python :: 3',
]
dynamic = ['version']

[project.optional-dependencies]
test = ['pytest']
dist = ['build', 'cibuildwheel', 'setuptools_scm', 'twine']

[project.urls]
"Homepage" = "https://github.com/wmayner/pyemd"
"Bug Tracker" = "https://github.com/wmayner/pyemd/issues"

[tool.setuptools_scm]
write_to = "src/pyemd/_version.py"
local_scheme = "no-local-version"

[tool.cibuildwheel]
skip = ["cp36*", "pp*"]
build-verbosity = 2
before-build = "cd {project} && git describe"
test-requires = ["pytest"]
test-command = "py.test {project}"
