[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyemd"
license = { file = "LICENSE" }
description = "A Python wrapper for Ofir Pele and Michael Werman's implementation of the Earth Mover's Distance."
authors = [{ name = "Will Mayner", email = "wmayner@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["numpy >= 1.15.0", "pot >= 0.9.0"]
readme = "README.rst"
classifiers = [
	'Development Status :: 5 - Production/Stable',
	'Intended Audience :: Developers',
	'Natural Language :: English',
	'License :: OSI Approved :: MIT License',
	'Programming Language :: Python :: 3',
]
dynamic = ['version']

[project.optional-dependencies]
test = ['pytest']
dist = ['build', 'setuptools_scm', 'towncrier', 'twine']
dev = [
	'pytest',
	'build',
	'setuptools_scm',
	'towncrier',
	'twine',
	'ipython',
]

[project.urls]
"Homepage" = "https://github.com/wmayner/pyemd"
"Bug Tracker" = "https://github.com/wmayner/pyemd/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.towncrier]
package = "pyemd"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changelog.d"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/wmayner/pyemd/issues/{issue}>`_"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false
